# isolated-agent

./: .gitignore  README.md  pyproject.toml
src/isolated_agent/: __init__.py
src/isolated_agent/agents/: __init__.py  aider.py  amp.py  claude.py  cline.py  codex.py  gemini.py  goose.py  opencode.py
src/isolated_agent/backends/: __init__.py
src/isolated_agent/backends/docker/: backend.py  renderer.py
src/isolated_agent/backends/docker/intercept/: exec_forward.c
src/isolated_agent/backends/docker/templates/: Dockerfile.agent.tpl  Dockerfile.task.tpl  docker-compose.yml.tpl  entrypoint.sh.tpl  exec-in-task.sh  fake-bwrap.sh  sh-wrapper.sh  ssh_config  task-run.sh  task-shell.sh
src/isolated_agent/backends/local/: __init__.py  backend.py
src/isolated_agent/cli/: main.py
src/isolated_agent/core/: __init__.py  agent.py  backend.py  models.py  registry.py  session.py
