[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isolated-agent"
version = "0.1.0"
description = "Run AI coding agents in sandboxed Docker environments"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
isolated-agent = "isolated_agent.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["isolated_agent*"]
